--- a/application/web/src/index/index.gohtml
+++ b/application/web/src/index/index.gohtml
@@ -2,11 +2,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 	<link href="/index/sidebar.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,15 +13,37 @@
 	
 	<title>{{.Title}}</title>
   </head>
-	<body >
-		<div class="wrapper">
 
-				{{template "sidebar" . }}
-				<div id="content">
-				{{template "navbar" . }}
-			
+  <script module>
+
+  new vue({
+    delimiters: ['##', '##'],
+});
+
+  import { createApp } from 'vue'
+
+  createApp({
+    data() {
+      return {
+        count: 0
+      }
+    }
+  }).mount('#app')
+  </script>
+	
+	{{template "header" . }}
+
+
+
+  <div id="app">
+  <button @click="count++">
+    Count is: ## count ##
+  </button>
+</div>
+
+
+	
+	{{template "footer" . }}
 				
-		</div> 
-	</body>
 </html>
 {{end}}
