--- a/application/web/src/index/navbar.gohtml
+++ b/application/web/src/index/navbar.gohtml
@@ -1,7 +1,6 @@
 {{define "navbar"}}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-
         <button type="button" id="sidebarCollapse" class="btn btn-sm btn-secondary">
             <i class="fas fa-align-left"></i>
             <span><i class="bi bi-layout-sidebar-inset"></i> Menu</span>
